--- a/app/src/client/index.html
+++ b/app/src/client/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="JavaScript NES emulator.">
   <meta name="keywords" content="NES,emulator,JavaScript">
   <title>cfxnes - NES emulator</title>
-  <link rel="icon" type="image/png" href="img/favicon.png">
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
   <header></header>
@@ -15,6 +15,6 @@
   <noscript>
     <p>To use cfxnes, please enable JavaScript.</p>
   </noscript>
-  <script src="js/app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
