--- a/app/src/client/index.html
+++ b/app/src/client/index.html
@@ -8,13 +8,13 @@
   <meta name="keywords" content="NES,emulator,JavaScript">
   <title>cfxnes - NES emulator</title>
   <link rel="icon" type="image/png" href="favicon.png">
+  <script src="vendor.js"></script>
 </head>
 <body>
-  <header></header>
-  <main></main>
+  <div id="root"></div>
   <noscript>
     <p>To use cfxnes, please enable JavaScript.</p>
   </noscript>
-  <script src="app.js"></script>
+  <script src="bundle.js"></script>
 </body>
 </html>
