--- a/app/src/client/index.html
+++ b/app/src/client/index.html
@@ -8,6 +8,7 @@
   <meta name="keywords" content="NES,emulator,JavaScript">
   <title>cfxnes - NES emulator</title>
   <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="stylesheet" href="bundle.css">
 </head>
 <body>
   <div id="root"></div>
