--- a/app/src/client/index.html
+++ b/app/src/client/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="JavaScript NES emulator.">
-  <meta name="keywords" content="NES,emulator,JavaScript">
+  <meta name="keywords" content="NES,Nintendo,emulator,JavaScript">
   <title>cfxnes - NES emulator</title>
   <link rel="icon" type="image/png" href="favicon.png">
   <link rel="stylesheet" href="bundle.css">
